# first-steps-llm-tool-use

./: README.md  basic_function_call.py  pyproject.toml  safe_tools.py
