[project]
name = "first-steps-llm-tool-use"
version = "0.1.0"
description = "Project to learn about LLM tool use + function calling"
authors = [
    { name = "Daniel N. Lang", email = "github+first-steps-llm-tool-use@tfc.ai" }
]
dependencies = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llama3_groq_8b_tool_use"]
